--- a/src/utils/prismjs-theme.css
+++ b/src/utils/prismjs-theme.css
@@ -10,8 +10,8 @@
 /*********************************************************
 * General
 */
-pre[class*="language-"],
-code[class*="language-"] {
+pre[class*='language-'],
+code[class*='language-'] {
   color: #000000;
   font-size: 13px;
   text-shadow: none;
@@ -30,30 +30,30 @@ code[class*="language-"] {
   -ms-hyphens: none;
   hyphens: none;
 }
-pre[class*="language-"]::selection,
-code[class*="language-"]::selection,
-pre[class*="language-"]::mozselection,
-code[class*="language-"]::mozselection {
+pre[class*='language-']::selection,
+code[class*='language-']::selection,
+pre[class*='language-']::mozselection,
+code[class*='language-']::mozselection {
   text-shadow: none;
   background: #b3d4fc;
 }
 @media print {
-  pre[class*="language-"],
-  code[class*="language-"] {
+  pre[class*='language-'],
+  code[class*='language-'] {
     text-shadow: none;
   }
 }
-pre[class*="language-"] {
+pre[class*='language-'] {
   margin: 2rem 0 2rem 0;
   padding: 2rem 1rem;
   overflow: scroll;
-  border:1px solid #efefef;
+  border: 1px solid #efefef;
   word-break: keep-all;
   background: #fafafa;
 }
-:not(pre) > code[class*="language-"] {
-  padding: .1em .3em;
-  border-radius: .3em;
+:not(pre) > code[class*='language-'] {
+  padding: 0.1em 0.3em;
+  border-radius: 0.3em;
   color: #ee3b50;
   background: #ffffff;
 }
@@ -61,7 +61,7 @@ pre[class*="language-"] {
 * Tokens
 */
 .namespace {
-  opacity: .7;
+  opacity: 0.7;
 }
 .token.comment,
 .token.prolog,
@@ -125,7 +125,7 @@ pre[class*="language-"] {
 pre[data-line] {
   position: relative;
 }
-pre[class*="language-"] > code[class*="language-"] {
+pre[class*='language-'] > code[class*='language-'] {
   position: relative;
   z-index: 1;
 }
